[package]
name = "oldmusa_server"
version = "0.1.0"
authors = ["Rossi Lorenzo <snowycoder@gmail.com>"]
edition = "2018"


[dependencies]
actix = "0.8"
actix-rt = "0.2"
actix-web = "1.0"
actix-identity = "0.1"
actix-files = "0.1"
argonautica = { version = "0.2", features=["simd"] }
chrono = { version = "0.4", features = ["serde"] }
derive_more = "0.15"
diesel = { version = "1.0", features = ["postgres", "mysql", "uuidv07", "r2d2", "chrono", "numeric"] }
diesel_migrations = "1.4"
mysql = "16.1"
bigdecimal = "0.1"
dotenv = "0.14"
log = "0.4"
env_logger = "0.6"
r2d2 = "0.8"
lazy_static = "1.3.0"
futures = "0.1"
juniper = "0.13"
serde = "1.0"
serde_derive = "1.0"
serde_json = "1.0"
uuid = { version = "0.7", features = ["serde", "v4"] }
hex = "0.4"
fcm = "^0.6.1"

[dev-dependencies]
rand = "0.7"
actix-http = "0.2"
