[package]
name = "oldmusa_server"
version = "0.1.0"
authors = ["Rossi Lorenzo <snowycoder@gmail.com>"]
edition = "2018"


[dependencies]
actix = "0.9"
actix-rt = "1.0"
actix-web = "2.0"
actix-identity = "0.2"
actix-files = "0.2"
argonautica = { version = "0.2", features=["simd"] }
chrono = { version = "0.4", features = ["serde"] }
derive_more = "0.99"
diesel = { version = "1.4", features = ["postgres", "mysql", "uuidv07", "r2d2", "chrono", "numeric"] }
diesel_migrations = "1.4"
mysql = "17.0"
bigdecimal = "0.1"
dotenv = "0.15"
log = "0.4"
env_logger = "0.7"
r2d2 = "0.8"
lazy_static = "1.4"
futures = "0.3"
juniper = "0.14"
serde = "1.0"
serde_derive = "1.0"
serde_json = "1.0"
uuid = { version = "0.8", features = ["serde", "v4"] }
hex = "0.4"
fcm = "0.7"
priority-queue = "0.7"

[dev-dependencies]
rand = "0.7"
actix-http = "1.0"
